apply ItemLinks css anywhere, not just in sidebar. prevents add-to-cart icon being clipped under album/photo thumbnails.
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@11305 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/matrix/theme.css
+++ b/themes/matrix/theme.css
@@ -505,7 +505,7 @@ div.block-search-SearchBlock a.advanced {
   padding: 3px;
 }
 
-div#gsSidebar div.block-core-ItemLinks a {
+div.block-core-ItemLinks a {
   display: block;
   padding: 3px;
 }
