--- a/themes/slider/theme.css
+++ b/themes/slider/theme.css
@@ -537,7 +537,7 @@ div.block-search-SearchBlock a.advanced {
   padding: 3px;
 }
 
-div#gsSidebar div.block-core-ItemLinks a {
+div.block-core-ItemLinks a {
   display: block;
   padding: 3px;
 }
